[gd_scene load_steps=12 format=3 uid="uid://bk7xalrii2xrj"]

[ext_resource type="Script" path="res://scenes/act 1/Act1.gd" id="1_wci6r"]
[ext_resource type="PackedScene" uid="uid://4sqynr8q87bi" path="res://CraneGame/TestingScene/TestingScene.tscn" id="3_ttx68"]
[ext_resource type="Texture2D" uid="uid://chovdg34dx24o" path="res://art/TV stuff/TvOutLine.PNG" id="4_ofwqp"]
[ext_resource type="Texture2D" uid="uid://15mhvrb4taip" path="res://art/TV stuff/TvInLine.PNG" id="5_3onbl"]
[ext_resource type="PackedScene" uid="uid://dcj1fh1821ttr" path="res://CraneGame/CranePrize/CranePrize.tscn" id="6_ip5yg"]
[ext_resource type="AudioStream" uid="uid://chw7cqcd81jg3" path="res://Audio/Music/hallmarkGeneric.mp3" id="7_kqqj2"]
[ext_resource type="Texture2D" uid="uid://0gikotte7yan" path="res://scenes/act 1/IMG_6454.png" id="7_ongo5"]

[sub_resource type="Animation" id="Animation_h7mxn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera2D:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2.48, 2.48)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(620, 450)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Credits:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_18umf"]
resource_name = "start_game"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera2D:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(2.48, 2.48), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(620, 450), Vector2(960, 540)]
}

[sub_resource type="Animation" id="Animation_xbl7j"]
resource_name = "creditgs"
length = 8.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Credits:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5, 7.03333, 8),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dlfy3"]
_data = {
"RESET": SubResource("Animation_h7mxn"),
"creditgs": SubResource("Animation_xbl7j"),
"start_game": SubResource("Animation_18umf")
}

[node name="Act1" type="Node2D"]
script = ExtResource("1_wci6r")
next_scene_path = "res://scenes/LetterToSanta/Letter.tscn"

[node name="TV" type="Node2D" parent="."]
position = Vector2(960, 541)
metadata/_edit_lock_ = true

[node name="Outline" type="Sprite2D" parent="TV"]
texture = ExtResource("4_ofwqp")

[node name="Inline" type="Sprite2D" parent="TV"]
position = Vector2(-339, 6)
scale = Vector2(0.646875, 0.65)
texture = ExtResource("5_3onbl")

[node name="CraneGame" type="Node2D" parent="."]

[node name="Node2D" parent="CraneGame" instance=ExtResource("3_ttx68")]
position = Vector2(279, 215)
scale = Vector2(0.6, 0.6)

[node name="Crane" parent="CraneGame/Node2D" index="0"]
position = Vector2(555, 185)
drop_length = 1.08
clamp_by_deg = 15

[node name="Ballz" type="Node2D" parent="CraneGame"]

[node name="CranePrize" parent="CraneGame/Ballz" instance=ExtResource("6_ip5yg")]
position = Vector2(613, 507)
prize_tracker_name = "start_game"

[node name="RigidBody2D" parent="CraneGame/Ballz/CranePrize" index="0"]
mass = 0.001

[node name="Label" parent="CraneGame/Ballz/CranePrize/RigidBody2D/TopHalf/MarginContainer" index="0"]
text = "[center] Start"

[node name="CranePrize2" parent="CraneGame/Ballz" instance=ExtResource("6_ip5yg")]
position = Vector2(786, 526)
prize_tracker_name = "credits"

[node name="TopHalf" parent="CraneGame/Ballz/CranePrize2/RigidBody2D" index="1"]
self_modulate = Color(0.579, 0.3225, 0.75, 1)

[node name="Label" parent="CraneGame/Ballz/CranePrize2/RigidBody2D/TopHalf/MarginContainer" index="0"]
theme_override_font_sizes/normal_font_size = 18
text = "[center]
Credits"

[node name="BottomHalf" parent="CraneGame/Ballz/CranePrize2/RigidBody2D" index="2"]
self_modulate = Color(0.7, 0, 0.0116665, 1)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(620, 450)
zoom = Vector2(2.48, 2.48)

[node name="Marker" type="Node2D" parent="."]
position = Vector2(620, 450)

[node name="Act1Animator" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_dlfy3")
}

[node name="Credits" type="Sprite2D" parent="."]
self_modulate = Color(1, 1, 1, 0)
z_index = 1665
position = Vector2(620, 450)
scale = Vector2(0.45, 0.45)
texture = ExtResource("7_ongo5")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_kqqj2")

[connection signal="prize_obtained" from="CraneGame/Node2D/RecievingField" to="." method="_on_recieving_field_prize_obtained"]

[editable path="CraneGame/Node2D"]
[editable path="CraneGame/Ballz/CranePrize"]
[editable path="CraneGame/Ballz/CranePrize2"]
